<resources>
    <string name="app_name">MovieApp</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="favorite">Favorite</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="cooming_soon">Cooming Soon</string>
    <string name="search_film">Search film</string>
    <string name="showing_result">Showing result of</string>
    <string name="sample_title">Maze Runner</string>
    <string name="sample_desc">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses</string>
    <string name="sample_duration">1h 29m</string>
    <string name="hd">HD</string>
    <string name="sample_genre">Adventure, Action, Comedy</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="btn_favorite">Add to Favorite</string>
    <string name="cast">Cast</string>
    <string name="sample_year">2019</string>
    <string name="sample_cast">Annisa Rosdiyana</string>
    <string name="search_movie">Search Movie</string>
    <string name="sample_casts">Dylan O\'Briyen, Kaya Scodalario. Will Pouter</string>
    <string name="message_no_data">No Data Found</string>
    <string name="message_delete">Delete Success</string>
    <string name="message_add_favorite">Add Favorite success</string>
</resources>