<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_100"
    android:fitsSystemWindows="true"
    tools:context=".presentation.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/black_100"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_563dp"
                app:layout_collapseMode="parallax">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMovie"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_563dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_photo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_174dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/black_40">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTitleMovie"
                        style="@style/Title1TextStyle"
                        android:text="@string/sample_title"
                        android:maxWidth="@dimen/dimen_375dp"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:layout_marginTop="@dimen/dimen_14dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDurationMovie"
                        style="@style/Detail1TextStyle"
                        android:text="@string/sample_duration"
                        android:maxWidth="@dimen/dimen_375dp"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        app:layout_constraintTop_toBottomOf="@id/tvTitleMovie"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvHdMovie"
                        style="@style/Detail3TextStyle"
                        android:text="@string/hd"
                        android:gravity="center"
                        android:background="@drawable/bg_hd"
                        android:maxWidth="@dimen/dimen_375dp"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        app:layout_constraintBottom_toBottomOf="@id/tvDurationMovie"
                        app:layout_constraintTop_toTopOf="@id/tvDurationMovie"
                        app:layout_constraintStart_toEndOf="@id/tvDurationMovie"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvGenreMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:layout_marginHorizontal="@dimen/dimen_6dp"
                        app:layout_constraintTop_toBottomOf="@id/tvDurationMovie"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <LinearLayout
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:layout_marginEnd="@dimen/dimen_20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rvGenreMovie">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnPlay"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_12sp"
                            android:fontFamily="@font/sfprotext"
                            app:cornerRadius="@dimen/dimen_6dp"
                            android:textAllCaps="false"
                            android:backgroundTint="@color/yellow_100"
                            app:icon="@drawable/ic_play_outline"
                            app:iconTint="@color/black"
                            app:iconGravity="start"
                            app:iconPadding="@dimen/dimen_4dp"
                            android:textColor="@color/black"
                            android:text="@string/watch_trailer"
                            android:layout_marginEnd="@dimen/dimen_6dp"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnFavorite"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_12sp"
                            android:fontFamily="@font/sfprotext"
                            app:cornerRadius="@dimen/dimen_6dp"
                            android:textAllCaps="false"
                            app:strokeWidth="@dimen/dimen_1dp"
                            app:strokeColor="@color/white_12"
                            android:backgroundTint="@color/black"
                            app:icon="@drawable/ic_add_yellow"
                            app:iconGravity="start"
                            app:iconPadding="@dimen/dimen_4dp"
                            android:textColor="@color/white"
                            android:text="@string/btn_favorite"
                            android:layout_marginStart="@dimen/dimen_6dp"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- The attribute app:layout_collapseMode="pin" is set so that
                 sticks to the top when the user scrolls the view up-->
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:background="@null"
                    android:contentDescription="this is button back"
                    />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--Now add the NestedScollView-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_100"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginHorizontal="@dimen/dimen_20dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescriptionMovie"
                style="@style/Detail2TextStyle"
                android:text="@string/sample_desc"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCast"
                style="@style/Heading2TextStyle"
                android:text="@string/cast"
                android:layout_marginTop="@dimen/dimen_20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>